autocfg.1.4.0.log
[autocfg] download directory: /tmp/top100_artifacts/autocfg-1.4.0
+ curl -sL https://crates.io/api/v1/crates/autocfg/1.4.0/download
+ tar xzf -
+ cd /tmp/top100_artifacts/autocfg-1.4.0
+ cargo clean
     Removed 0 files
+ cargo +stable test ''
    Blocking waiting for file lock on package cache
   Compiling autocfg v1.4.0 (/tmp/top100_artifacts/autocfg-1.4.0)
    Finished `test` profile [unoptimized + debuginfo] target(s) in 1.79s
     Running unittests src/lib.rs (target/debug/deps/autocfg-20c29ebf2d22951b)

running 5 tests
test tests::dir_does_contain_target ... ok
test tests::dir_does_contain_target_with_custom_target_dir ... ok
test tests::dir_does_not_contain_target ... ok
test tests::version_cmp ... ok
test tests::dir_does_not_contain_target_with_custom_target_dir ... ok

test result: ok. 5 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s

     Running tests/no_std.rs (target/debug/deps/no_std-f6334568a83e851d)

running 1 test
error[E0432]: unresolved import `std`
 --> <anon>:2:9
  |
2 | pub use std::mem;
  |         ^^^ use of unresolved module or unlinked crate `std`
  |
help: you might be missing a crate named `std`, add it to your project and import it in your code
  |
2 + extern crate std;
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
test no_std ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.65s

     Running tests/rustflags.rs (target/debug/deps/rustflags-58c82aa12130d455)

running 1 test
error[E0463]: can't find crate for `autocfg`
 --> <anon>:1:1
  |
1 | extern crate autocfg as probe;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
test test_with_sysroot ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 1.13s

     Running tests/tests.rs (target/debug/deps/tests-99fe418927fa2430)

running 12 tests
test autocfg_version ... ok
test probe_alloc ... ok
error[E0463]: can't find crate for `doesnt_exist`
 --> <anon>:1:1
  |
1 | extern crate doesnt_exist as probe;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
warning: trait objects without an explicit `dyn` are deprecated
 --> <anon>:1:18
  |
1 | pub type Probe = std::convert::AsRef<str>;
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
  = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
  = note: `#[warn(bare_trait_objects)]` on by default
help: if this is a dyn-compatible trait, use `dyn`
  |
1 | pub type Probe = dyn std::convert::AsRef<str>;
  |                  +++

test probe_bad_sysroot_crate ... ok
warning: 1 warning emitted

test probe_as_ref ... ok
warning: use of deprecated method `core::str::<impl str>::trim_left`: superseded by `trim_start`
 --> <anon>:1:33
  |
1 | pub fn probe() { let _ = "test".trim_left(); }
  |                                 ^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default
help: replace the use of the deprecated method
  |
1 - pub fn probe() { let _ = "test".trim_left(); }
1 + pub fn probe() { let _ = "test".trim_start(); }
  |

warning: 1 warning emitted

test probe_constant ... ok
test probe_add ... ok
test probe_expression ... ok
test probe_i128 ... ok
test probe_std ... ok
error: function `x` is never used
 --> <anon>:1:24
  |
1 | #![deny(dead_code)] fn x() {}
  |                        ^
  |
note: the lint level is defined here
 --> <anon>:1:9
  |
1 | #![deny(dead_code)] fn x() {}
  |         ^^^^^^^^^

error: aborting due to 1 previous error

test probe_no_std ... ok
test probe_raw ... ok
warning: trait objects without an explicit `dyn` are deprecated
 --> <anon>:1:18
  |
1 | pub type Probe = std::iter::Sum<i32>;
  |                  ^^^^^^^^^^^^^^^^^^^
  |
  = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
  = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
  = note: `#[warn(bare_trait_objects)]` on by default
help: if this is a dyn-compatible trait, use `dyn`
  |
1 | pub type Probe = dyn std::iter::Sum<i32>;
  |                  +++

warning: 1 warning emitted

test probe_sum ... ok

test result: ok. 12 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 2.23s

     Running tests/wrappers.rs (target/debug/deps/wrappers-f45e1dbb974a5753)

running 1 test
error[E0412]: cannot find type `mesize` in this scope
 --> <anon>:1:18
  |
1 | pub type Probe = mesize;
  |                  ^^^^^^ help: a builtin type with a similar name exists: `isize`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
error[E0412]: cannot find type `mesize` in this scope
 --> <anon>:1:18
  |
1 | pub type Probe = mesize;
  |                  ^^^^^^ help: a builtin type with a similar name exists: `isize`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
warning: autocfg could not probe for `std`
error[E0412]: cannot find type `mesize` in this scope
 --> <anon>:1:18
  |
1 | pub type Probe = mesize;
  |                  ^^^^^^ help: a builtin type with a similar name exists: `isize`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
error[E0412]: cannot find type `mesize` in this scope
 --> <anon>:1:18
  |
1 | pub type Probe = mesize;
  |                  ^^^^^^ help: a builtin type with a similar name exists: `isize`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
warning: autocfg could not probe for `std`
warning: autocfg could not probe for `std`
warning: autocfg could not probe for `std`
warning: autocfg could not probe for `std`
test test_wrappers ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 1.21s

+ RESULT=0
+ cd /tmp/top100_artifacts
+ rm -rf /tmp/top100_artifacts/autocfg-1.4.0
+ exit 0
